# blog-serve

./: Cargo.toml  README.md  azure-pipelines.yml
src/: cli.rs  main.rs
static/: index.html
