[package]
name = "blog-serve"
version = "0.1.0"
authors = ["Bazaah <github@luxolus.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.9"
actix-files = "0.1.7"
env_logger = "0.7.1"
lazy_static = "1.4.0"
clap = "2.33.0"

[profile.release]
lto = true
opt-level = 3